data/derived/fa15/progs/unify/prog0954.ml.out
Characters 15-16:
  let _ = helper 6;;
                 ^
Error: This expression has type int but an expression was expected of type
         'a list
